--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
 			</header>
-			<iframe src="https://www.dropbox.com/scl/fi/rs7fpyd3q01l2jvwo239i/HOW-SR-LIEN-0001.pdf?rlkey=y3kxvzfwsm7y11w162fl739ca&dl=0" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
+			<iframe src="https://justpaste.it/ce7f8" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
 										<p hidden>
-			<iframe src="https://justpaste.it/duwpw/pdf" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
+			<iframe src="https://justpaste.it/ce7f8" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
 										</p>
 
 		<!-- One -->
